--- a/style.css
+++ b/style.css
@@ -2,6 +2,41 @@
 @import url("https://fonts.googleapis.com/css2?family=Caveat&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
+
+#container {
+  display: block;
+}
+
+@media only screen and (orientation: portrait) {
+  #container {
+    height: 100vw;
+
+    -webkit-transform: rotate(90deg);
+
+    -moz-transform: rotate(90deg);
+
+    -o-transform: rotate(90deg);
+
+    -ms-transform: rotate(90deg);
+
+    transform: rotate(90deg);
+  }
+}
+
+@media only screen and (orientation: landscape) {
+  #container {
+    -webkit-transform: rotate(0deg);
+
+    -moz-transform: rotate(0deg);
+
+    -o-transform: rotate(0deg);
+
+    -ms-transform: rotate(0deg);
+
+    transform: rotate(0deg);
+  }
+}
+
 body {
   font-family: "Sono", sans-serif;
   display: flex;
