--- a/style.css
+++ b/style.css
@@ -3,40 +3,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
 
-#container {
-  display: block;
-}
-
-@media only screen and (orientation: portrait) {
-  #container {
-    height: 100vw;
-
-    -webkit-transform: rotate(90deg);
-
-    -moz-transform: rotate(90deg);
-
-    -o-transform: rotate(90deg);
-
-    -ms-transform: rotate(90deg);
-
-    transform: rotate(90deg);
-  }
-}
-
-@media only screen and (orientation: landscape) {
-  #container {
-    -webkit-transform: rotate(0deg);
-
-    -moz-transform: rotate(0deg);
-
-    -o-transform: rotate(0deg);
-
-    -ms-transform: rotate(0deg);
-
-    transform: rotate(0deg);
-  }
-}
-
 body {
   font-family: "Sono", sans-serif;
   display: flex;
@@ -106,7 +72,7 @@ body {
   opacity: 1;
   transition: opacity 0.8s ease-in 0.8s;
 }
-
+/* 
 @media (max-width: 450px) {
   .container {
     width: 100px;
@@ -114,5 +80,43 @@ body {
   .panel:nth-of-type(4),
   .panel:nth-last-of-type(5) {
     display: none;
+  }
+} */
+
+@media (max-width: 450px) {
+  body {
+    font-size: 16px;
+  }
+
+  .container {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .panel {
+    height: auto;
+    margin: 10px 0;
+    border-radius: 0;
+    flex: none;
+  }
+
+  .panel.active {
+    flex: none;
+  }
+
+  .panel h3 {
+    font-size: 24px;
+    bottom: 10px;
+    left: 10px;
+    text-align: left;
+  }
+
+  .panel p {
+    font-size: 14px;
+    top: 50%;
+    transform: translateY(-50%);
+    margin: 10px;
+    border-radius: 0;
+    background-color: transparent;
   }
 }
