--- a/style.css
+++ b/style.css
@@ -72,8 +72,8 @@ body {
   opacity: 1;
   transition: opacity 0.8s ease-in 0.8s;
 }
-/* 
-@media (max-width: 450px) {
+
+/* @media (max-width: 450px) {
   .container {
     width: 100px;
   }
@@ -83,40 +83,49 @@ body {
   }
 } */
 
-@media (max-width: 450px) {
+@media screen and (max-width: 600px) {
   body {
-    font-size: 16px;
-  }
-
-  .container {
-    width: 100%;
+    font-family: "Sono", sans-serif;
+    display: flexbox;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    overflow: hidden;
+    margin: 0;
+    background-color: #b3c6ee;
   }
-
   .panel {
-    height: auto;
-    margin: 10px 0;
-    border-radius: 0;
-    flex: none;
-  }
-
-  .panel.active {
-    flex: none;
+    background-size: auto 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 45vh;
+    flex: 0.5;
+    margin: 10px;
+    -webkit-transition: all 775ms ease-in;
+    overflow: hidden;
   }
 
   .panel h3 {
-    font-size: 24px;
-    bottom: 10px;
-    left: 10px;
-    text-align: left;
+    font-size: 10px;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    margin: 0;
+    opacity: 0;
   }
-
   .panel p {
-    font-size: 14px;
-    top: 50%;
-    transform: translateY(-50%);
-    margin: 10px;
-    border-radius: 0;
-    background-color: transparent;
+    color: #f7f7f8;
+    background-color: rgb(161, 161, 161, 0.7);
+    /* font-family: "Caveat", cursive; */
+    font-family: "Quicksand", sans-serif;
+    font-size: 50%;
+    position: absolute;
+    top: 10%;
+    left: 5px;
+    right: 10px;
+    margin: 0;
+    border-radius: 5px;
+    opacity: 0;
   }
 }
